<resources>
    <string name="app_name"> Banat Travel </string>
    <string name="login_welcome"> Welcome to the Banat Travel App! </string>
    <string name="login_email"> Email </string>
    <string name="login_password"> Password </string>
    <string name="login_no_account"> Don\'t have an account? </string>
    <string name="login_button"> Log in </string>
    <string name="remaining_attempts">Remaining attempts</string>
    <string name="signup_welcome"> Create a new account </string>
    <string name="signup_button"> Register </string>
    <string name="signup_account"> Already have an account? </string>
    <string name="signup_email"> Email </string>
    <string name="signup_first_name">First name</string>
    <string name="signup_last_name">Last name</string>
    <string name="signup_password"> Password </string>
    <string name="signup_error1"> Email already exists </string>
    <string name="signup_error2"> Email and password should not be empty </string>
    <string name="signup_error3"> Email should not be empty </string>
    <string name="signup_error4"> Password should not be empty </string>
    <string name="signup_error5"> Email and password are not valid </string>
    <string name="signup_error6"> Please enter a valid email </string>
    <string name="signup_error7"> Password should have at least 7 characters </string>
    <string name="county_explore"> Select which county to explore </string>
    <string name="county_RO_country"> Country: Romania </string>
    <string name="county_SRB_country"> Country: Serbia </string>
    <string name="county_CS"> Caraș-Severin County </string>
    <string name="county_CS_population"> Population: 274 277 people </string>
    <string name="county_CS_area"> Area: 8 514 sq km </string>
    <string name="county_CS_cities"> Important cities: Reșița, Caransebeș </string>
    <string name="county_CS_tourism"> Tourism: Cheile Nerei–Beușnita National Park, Domogled–Valea Cernei National Park, Danube Iron Gate National Park, Semenic resort, Băile-Herculane resort </string>
    <string name="county_MH"> Mehedinți County </string>
    <string name="county_MH_population"> Population: 254 570 people </string>
    <string name="county_MH_area"> Area: 4 933 sq km </string>
    <string name="county_MH_cities"> Important cities: Orșova </string>
    <string name="county_MH_tourism"> Tourism: the ruins of Trajan\'s first bridge over the Danube, the city of Orșova, the Danube\'s Iron Gates  </string>
    <string name="county_TM"> Timiș County </string>
    <string name="county_TM_population"> Population: 758 380 people </string>
    <string name="county_TM_area"> Area: 8 697 sq km </string>
    <string name="county_TM_cities"> Important cities: Timișoara, Lugoj </string>
    <string name="county_TM_tourism"> Tourism: Theresia Bastion, Huniade Castle, Timișoara Orthodox Cathedral, Timișoara Dome, Timișoara Millennium Church, Buziaș resort </string>
    <string name="county_Vojvodina"> Vojvodina County </string>
    <string name="county_Vojvodina_population"> Population: 1 931 809 people </string>
    <string name="county_Vojvodina_area"> Area: 21 614 sq km </string>
    <string name="county_Vojvodina_cities"> Important cities: Zrenjanin, Pančevo, Kikinda, Vršac </string>
    <string name="county_Vojvodina_tourism"> Tourism: Deliblato Sands, Carska Bara bog, the city of Zrenjanin, the city of Vršac </string>
    <string name="explore"> Select which place to explore </string>
    <string name="explore_now"> Explore now </string>
    <string name="view_offer"> View offer </string>
    <string name="CS_Herculane_name"> Băile-Herculane area </string>
    <string name="CS_Herculane_famous"> The spa town has been visited for its supposedly natural healing properties: hot springs with sulfur, chlorine, sodium, calcium, magnesium and other minerals, as well as negatively ionized air. </string>
    <string name="CS_Resita_name"> Reșița area </string>
    <string name="CS_Resita_famous"> The capital of Caraș-Severin county was a powerful industrial location in modern Romania, but it has lost most of its importance and its economy faced a drawback after 1989. However, the city\'s economy is on an upward slope, due to serious investments in its rehabilitation. </string>
    <string name="CS_Semenic_name"> Semenic area </string>
    <string name="CS_Semenic_famous"> Semenic is a ski resort in the Semenic-Cheile Carașului National Park, in the Banat region of Romania. Besides it there are many places that catch your eye. We invite you to discover the wonders of this area. </string>
    <string name="CS_South_name"> Danube Defile </string>
    <string name="CS_South_famous"> You can stop anywhere to admire paradise. On one side, rocky hills, parks and nature reserves with secular forests protected with varieties of plants and birds unique in the world. And on the other, the lazy thread of the Danube. Nature lovers will be delighted by the rare trees and shrubs, the straw colonies. </string>
    <string name="MH_Dubova_name"> Dubova area </string>
    <string name="MH_Dubova_famous"> The commune is famous for its picturesque surroundings and for the fact that it attracts many tourists every year. We let you discover more about it. </string>
    <string name="MH_Orsova_name"> Orșova area </string>
    <string name="MH_Orsova_famous"> Orșova is a port city on the Danube river in southwestern Romania\'s Mehedinți County. It is one of four localities in the county located in the Banat historical region. It is situated just above the Iron Gates, on the spot where the Cerna River meets the Danube. Also, the city was the site of a Roman port in Dacia Malvensis, and the site of a castrum named Dierna. </string>
    <string name="TM_Buzias_name"> Buziaș and Recaș </string>
    <string name="TM_Buzias_famous"> The settlement from the Buzias Depression has been known since Roman times, under the name of Ahibis. The documentary attestation is from the XIV - XV centuries and has been declared a spa town since 1819. Recaș is well-known in the world for the quality of its wines. </string>
    <string name="TM_Charlottenburg_name"> Charlottenburg </string>
    <string name="TM_Charlottenburg_famous"> If you are a fan of holidays in the fresh air and you like special villages where people are happy and welcoming, a small village in Timiș County is the perfect place to recharge your batteries. Charlottenburg is the only round village in Romania. </string>
    <string name="TM_Lugoj_name"> Lugoj area </string>
    <string name="TM_Lugoj_famous"> Lugoj is a city in Timiș County, Banat, western Romania. The river Timiș divides the city into two halves, the so-called Romanian Lugoj that spreads on the right bank and the German Lugoj on the left bank. Lugoj was once a strongly fortified city that developed along the river Timiș. During the Middle Ages and eighteenth century, it was of greater relative importance than at present. </string>
    <string name="TM_Timisoara_name"> Timișoara </string>
    <string name="TM_Timisoara_famous"> Nicknamed the Little Vienna or the City of Flowers, Timișoara is considered the informal capital city of the historical Banat. The country\'s third most populous city is the economic hub of the region, with 332 983 inhabitants as of the 2016 census, home to almost a half-million inhabitants in the metropolitan area, as well as ca. 50,000 students from over 50 countries. </string>
    <string name="V_Danube_name"> Danube area </string>
    <string name="V_Danube_famous"> The Danube is the second-longest river in Europe at 2857 km. It flows through 10 countries and is constantly changing. You’ll never get bored when you’re on the Danube! </string>
    <string name="V_Kikinda_name"> Kikinda </string>
    <string name="V_Kikinda_famous"> The city was founded in the 18th century. From 1774 to 1874 Kikinda was the seat of the District of Velika Kikinda, an autonomous administrative unit of Habsburg Monarchy. Before the break-up of former Yugoslavia, hunting tourism was widespread in Kikinda. There are a number of hunting grounds in the city covering an area of 300 square kilometres (116 sq mi), mostly around the banks of the Danube-Tisa-Danube Canal, where rabbits, pheasants and deer are hunted. </string>
    <string name="V_Pancevo_name"> Pančevo </string>
    <string name="V_Pancevo_famous"> Pančevo is the fourth largest city in Vojvodina by population. The city is recognized for a very rich cultural life, which is reflected in the activity of 15 cultural institutions as well as in the organization of more than 40 events per year. The city is considered to be the city of sports, because it has always been famous for its well-known athletes. </string>
    <string name="V_Vrsac_name"> Vršac </string>
    <string name="V_Vrsac_famous"> The symbol of the town is the Vršac Castle, which dates back to the mid 15th century. It stands at the top of the hill overlooking Vršac. One popular place to visit  is the local family-run winery, Vinik, which produces the Vržole Red, Vržole White and Bermetto wine. </string>
    <string name="V_Zrenjanin_name"> Zrenjanin </string>
    <string name="V_Zrenjanin_famous"> Zrenjanin is the city of bridges, youth, sports, culture, interesting architecture and people of more than twenty nationalities. The quiet little town on the banks of the Bega combines the nostalgic charm of the time when the "portion" of freedom of small traffic with the air of a handy holiday destination came from the Serbs. </string>
    <string name="book_now"> Book now </string>
    <string name="checkout"> Checkout </string>
    <string name="incorrect_credentials">Incorrect credentials</string>
    <string name="shopping_cart_page"> Shopping cart </string>
    <string name="shopping_cart_details_from"> From </string>
    <string name="shopping_cart_details_to"> To </string>
    <string name="shopping_cart_details_price_person"> Price per person </string>
    <string name="shopping_cart_details_duration"> Duration </string>
    <string name="shopping_cart_details_number_of_persons"> Number of persons </string>
    <string name="shopping_cart_details_price"> Reservation price </string>
    <string name="shopping_cart_details_save"> Save </string>
    <string name="shopping_cart_details_select_date"> Select date </string>
    <string name="shopping_cart_details_remove"> Remove </string>
    <string name="shopping_cart_details_select_from_date_select"> Select from date </string>
    <string name="shopping_cart_details_select_from_date_save"> Save date </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
