<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:orientation="vertical"
    android:background="@drawable/yellow_blue_gradient">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_welcome"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textAlignment="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="7"
        android:gravity="center">

        <EditText
            android:id="@+id/signup_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:autofillHints=""
            android:textColor="@color/firstColor"
            android:hint="@string/signup_email"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/signup_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:autofillHints=""
            android:hint="@string/signup_password"
            android:inputType="textPassword"
            android:textColor="@color/firstColor"/>

        <TextView
            android:id="@+id/signup_incorrect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="15dp"
            android:textColor="#FF0000"/>

        <Button
            android:id="@+id/signup_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/blue_gradient"
            android:paddingLeft="40dp"
            android:paddingTop="20dp"
            android:paddingRight="40dp"
            android:paddingBottom="20dp"
            android:text="@string/signup_button"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/already_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_account"
            android:textSize="18sp"
            android:layout_marginTop="15dp"
            android:textColor="@color/firstColor"
            android:textAlignment="center"/>

    </LinearLayout>

</LinearLayout>