<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent=".9">

        <EditText
            android:id="@+id/register_first_name"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:autofillHints=""
            android:background="@drawable/button_with_blue_border"
            android:drawableStart="@drawable/ic_user"
            android:drawablePadding="10sp"
            android:drawableTint="@color/secondary_color"
            android:hint="@string/signup_first_name"
            android:inputType="textPersonName"
            android:padding="10sp"
            android:textColor="@color/secondary_color"
            android:textColorHint="@color/secondary_color"
            android:textCursorDrawable="@color/secondary_color"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/register_last_name"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10sp"
            android:autofillHints=""
            android:background="@drawable/button_with_blue_border"
            android:drawableStart="@drawable/ic_user"
            android:drawablePadding="10sp"
            android:drawableTint="@color/secondary_color"
            android:hint="@string/signup_last_name"
            android:inputType="textPersonName"
            android:padding="10sp"
            android:textColor="@color/secondary_color"
            android:textColorHint="@color/secondary_color"
            android:textCursorDrawable="@color/secondary_color"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/register_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/register_first_name" />

        <EditText
            android:id="@+id/register_email"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10sp"
            android:autofillHints=""
            android:background="@drawable/button_with_blue_border"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="10sp"
            android:drawableTint="@color/secondary_color"
            android:hint="@string/signup_email"
            android:inputType="textEmailAddress"
            android:padding="10sp"
            android:textColor="@color/secondary_color"
            android:textColorHint="@color/secondary_color"
            android:textCursorDrawable="@color/secondary_color"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/register_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/register_last_name" />

        <EditText
            android:id="@+id/register_password"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10sp"
            android:autofillHints=""
            android:background="@drawable/button_with_blue_border"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="10sp"
            android:drawableTint="@color/secondary_color"
            android:hint="@string/signup_password"
            android:inputType="textPassword"
            android:padding="10sp"
            android:textColor="@color/secondary_color"
            android:textColorHint="@color/secondary_color"
            android:textCursorDrawable="@color/secondary_color"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/register_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/register_email" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="10sp"
            android:background="@drawable/button_with_blue_border"
            android:paddingVertical="10sp"
            android:text="@string/signup_button"
            android:textColor="@color/secondary_color"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/register_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/register_password" />

        <TextView
            android:id="@+id/register_login"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/signup_account"
            android:textAlignment="center"
            android:textColor="@color/secondary_color"
            android:textSize="20sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/register_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>