<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent=".9">

        <EditText
            android:id="@+id/login_email"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:autofillHints=""
            android:background="@drawable/button_with_blue_border"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="10sp"
            android:drawableTint="@color/secondary_color"
            android:hint="@string/signup_email"
            android:inputType="textEmailAddress"
            android:padding="10sp"
            android:textColor="@color/secondary_color"
            android:textColorHint="@color/secondary_color"
            android:textCursorDrawable="@color/secondary_color"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/login_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10sp"
            android:autofillHints=""
            android:background="@drawable/button_with_blue_border"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="10sp"
            android:drawableTint="@color/secondary_color"
            android:hint="@string/signup_password"
            android:inputType="textPassword"
            android:padding="10sp"
            android:textColor="@color/secondary_color"
            android:textColorHint="@color/secondary_color"
            android:textCursorDrawable="@color/secondary_color"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/login_remember_me_forgot_password_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_email" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/login_remember_me_forgot_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10sp"
            app:layout_constraintBottom_toTopOf="@id/login_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_password">

            <CheckBox
                android:id="@+id/login_remember_me"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10sp"
                android:buttonTint="@color/secondary_color"
                android:text="Remember me"
                android:textAlignment="textStart"
                android:textColor="@color/secondary_color"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/login_forgot_password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/login_forgot_password"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:text="Forgot password"
                android:textAlignment="textEnd"
                android:textColor="@color/secondary_color"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/login_remember_me"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/login_button"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="10sp"
            android:background="@color/secondary_color"
            android:paddingVertical="10sp"
            android:stateListAnimator="@null"
            android:text="@string/login_button"
            android:textColor="@color/primary_color"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/login_sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_remember_me_forgot_password_layout" />

        <TextView
            android:id="@+id/login_sign_up"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="Create account"
            android:textAlignment="center"
            android:textColor="@color/secondary_color"
            android:textSize="20sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@id/login_remaining_attempts"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_button" />

        <TextView
            android:id="@+id/login_remaining_attempts"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:textColor="@color/secondary_color"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_sign_up" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>